<resources>
    <string name="app_name">ssFlicker</string>
    <string name="activity_name_home_key">ssFlicker</string>
	<string name="activity_name_flick">ssFlicker</string>
    <string name="activity_name_edit">ssFlicker - Edit mode</string>
    <string name="activity_name_pref">ssFlicker - Settings</string>
    <string name="activity_name_donate">ssFlicker - Donate</string>
    <string name="service_name_overlay">ssFlicker - Overlay service</string>
    <string name="receiver_name_boot">ssFlicker</string>
	<string name="receiver_name_invisible_appwidget">ssFlicker - Invisible widget</string>
	<string name="enter_flick_mode">Enter flick mode</string>
	<string name="view_appwidget_error">Cannot show this widget</string>
	<string name="recent_pointer_error">Can\'t use recent pointer at Android 5.0 or later</string>
	<string name="task_pointer_error">Can\'t use task pointer at Android 5.0 or later</string>
	<string name="require_permission_call_phone">Require directly call phone numbers permission</string>
	<string name="enter_edit_mode">Enter edit mode</string>
	<string name="pointer_custom">Pointer</string>
	<string name="pointer_home">Home pointer</string>
	<string name="pointer_recent">Recent pointer</string>
	<string name="pointer_task">Tasks pointer</string>
	<string name="app_launcher">App</string>
	<string name="app_home">Home app</string>
	<string name="app_send">Share app</string>
	<string name="app_shortcut">Shortcut</string>
	<string name="app_appwidget">Widget</string>
	<string name="app_function">Function</string>
	<string name="add">Add</string>
	<string name="open">Open</string>
	<string name="edit">Edit</string>
	<string name="move">Move</string>
	<string name="close">Close</string>
	<string name="delete">Delete</string>
	<string name="clear">Clear</string>
	<string name="settings">Settings</string>
	<string name="initial">Initial</string>
	<string name="cancel">Cancel</string>
	<string name="fail_set_image">Failed to set a image</string>
	<string name="edit_send_text_template">Text template</string>
	<string name="edit_appwidget_position">Position</string>
	<string name="horizontal">Horizontal</string>
	<string name="vertical">Vertical</string>
	<string name="edit_appwidget_size">Size</string>
	<string name="width">Width</string>
	<string name="height">Height</string>
	<string name="icon_color">Icon color</string>
	<string name="original_icon">Original icon</string>
	<string name="app_icon">App icon</string>
	<string name="multi_app_icon">Multi apps icon</string>
	<string name="image">Image</string>
	<string name="delete_pointer">Delete this pointer?</string>
	<string name="delete_app">Delete this app?</string>
	<string name="launch">Launch</string>
	<string name="launch_from_statusbar">Launch from status bar</string>
	<string name="view_action">View / Action</string>
	<string name="window">Window</string>
	<string name="display_position_portrait">Display position on vertical screen</string>
	<string name="display_position_landscape">Display position on horizontal screen</string>
	<string name="pointer_window">Pointer window</string>
	<string name="dock_window">Dock</string>
	<string name="icon_text">Icon / Text</string>
	<string name="icon">Icon</string>
	<string name="icon_size">Icon size</string>
	<string name="text">Text</string>
	<string name="text_visibility">Visibility of pointer name and app name</string>
	<string name="text_color">Text color</string>
	<string name="text_size">Text size</string>
	<string name="etc...">Etc…</string>
	<string name="vibrate_when_tapping">Vibrate when tapping</string>
	<string name="no_vibrator">No vibrator</string>
	<string name="statusbar_visibility">Hide status bar</string>
	<string name="statusbar_visibility_summary">During launching of ssFlicker hides the status bar</string>
	<string name="invisible_appwidget_background_visibility">Invisible widget background visibility</string>
	<string name="no_invisible_appwidget">No invisible widget</string>
	<string name="invisible">Invisible</string>
	<string name="etc">Etc</string>
	<string name="backup_restore">Backup / Restore</string>
	<string name="no_storage">No storage</string>
	<string name="require_permission_write_external_storage">Require write storage permission</string>
	<string name="donation">Donation</string>
	<string name="launch_by_default">Launch by default</string>
	<string name="clear_default">Clear to launch ssFlicker by default for some actions?</string>
	<string name="can_not_set_default">Can\'t set nor clear each launch by default on this screen.\nOnly can clear all launch by default from switch on top of screen.\nLaunch by default please set according to the procedure of Android.</string>
	<string name="launch_by_home_key">Launch by home key</string>
	<string name="home_key_another_home">Another home</string>
	<string name="home_key_click_mode">Click mode</string>
	<string name="home_key_click_interval">Click interval</string>
	<string name="launch_by_now">Launch by now</string>
	<string name="launch_by_search_key">Launch by search key</string>
	<string name="launch_from_overlay">Launch from overlay</string>
	<string name="require_permission_system_alert_window">Require draw over other apps permission</string>
	<string name="start_overlay_service">Turn on launch from overlay</string>
	<string name="stop_overlay_service">Turn off launch from overlay</string>
	<string name="overlay_point_0">Overlay point 1</string>
	<string name="overlay_point_1">Overlay point 2</string>
	<string name="enable">Enable</string>
	<string name="overlay_point_side">Side</string>
	<string name="overlay_point_position">Position</string>
	<string name="overlay_point_width">Width</string>
	<string name="background_color">Background color</string>
	<string name="overlay_point_action">Swipe / Tap</string>
	<string name="running_foreground">Run in foreground</string>
	<string name="running_foreground_summary">Run service as high priority, will be hard to kill</string>
	<string name="launch_by_sensor">Launch by sensor</string>
	<string name="launch_by_sensor_summary">Launch using accelerometer or proximity sensor.</string>
	<string name="no_sensor">No sensor</string>
	<string name="start_sensor_service">Turn on launch by sensor</string>
	<string name="stop_sensor_service">Turn off launch by sensor</string>
	<string name="launch_by_waving">Launch by waving</string>
	<string name="launch_by_waving_summary">Launch by waving your hands near the proximity sensor by the earpiece</string>
	<string name="no_prox_sensor">No proximity sensor</string>
	<string name="launch_by_shaking">Launch by shaking</string>
	<string name="launch_by_shaking_summary">Launch by shaking phone</string>
	<string name="no_accel_sensor">No accelerometer</string>
	<string name="shake_sensitivity">Shake sensitivity</string>
	<string name="sensor_toast">Message view</string>
	<string name="sensor_toast_summary">Show message when launched by sensor</string>
	<string name="home_key_click_mode_single">Single click</string>
	<string name="home_key_click_mode_double">Double click</string>
	<string name="int_200_ms">200 msec</string>
	<string name="int_300_ms">300 msec</string>
	<string name="int_400_ms">400 msec</string>
	<string name="int_500_ms">500 msec</string>
	<string name="int_600_ms">600 msec</string>
	<string name="int_700_ms">700 msec</string>
	<string name="int_800_ms">800 msec</string>
	<string name="int_900_ms">900 msec</string>
	<string name="int_1000_ms">1000 msec</string>
	<string name="tap">Tap</string>
	<string name="swipe">Swipe</string>
	<string name="overlay_point_position_0">Corner 1</string>
	<string name="overlay_point_position_1">Corner 2</string>
	<string name="overlay_point_position_2">Quarter 1</string>
	<string name="overlay_point_position_3">Quarter 2</string>
	<string name="overlay_point_position_4">Quarter 3</string>
	<string name="overlay_point_position_5">Quarter 4</string>
	<string name="overlay_point_position_6">Half 1</string>
	<string name="overlay_point_position_7">Half 2</string>
	<string name="overlay_point_position_8">Full</string>
	<string name="overlay_point_position_9">Center 1</string>
	<string name="overlay_point_position_10">Center 2</string>
	<string name="overlay_point_position_11">Center 3</string>
	<string name="overlay_point_width_thin">Thin</string>
	<string name="overlay_point_width_midium">Midium</string>
	<string name="overlay_point_width_thick">Thick</string>
	<string name="overlay_point_width_thickest">Thickness</string>
	<string name="shake_most_sensitive">Most sensitive (12)</string>
	<string name="shake_sensitive">Sensitive (18)</string>
	<string name="shake_middle">Middle (24)</string>
	<string name="shake_insensitive">Insensitive (30)</string>
	<string name="shake_most_insensitive">Most insensitive (36)</string>
	<string name="left">Left</string>
	<string name="upper_left">Upper left</string>
	<string name="upper">Upper</string>
	<string name="upper_right">Upper right</string>
	<string name="right">Right</string>
	<string name="lower_right">Lower right</string>
	<string name="lower">Lower</string>
	<string name="lower_left">Lower left</string>
	<string name="center">Center</string>
	<string name="left_of_pointer_window">Left of pointer window</string>
	<string name="above_pointer_window">Above pointer window</string>
	<string name="right_of_pointer_window">Right of pointer window</string>
	<string name="below_pointer_window">Below pointer window</string>
	<string name="icon_size_tiny">Tiny</string>
	<string name="icon_size_small">Small</string>
	<string name="icon_size_medium">Medium</string>
	<string name="icon_size_large">Large</string>
	<string name="icon_size_huge">Huge</string>
	<string name="text_size_small">Small</string>
	<string name="text_size_medium">Medium</string>
	<string name="text_size_large">Large</string>
	<string name="about">About ssFlicker</string>
	<string name="dev_name">&#169;2011 ss.momonga</string>
	<string name="app_info">App information</string>
	<string name="play_store">- Google Play Store</string>
	<string name="play_store_url">https://play.google.com/store/apps/details?id=com.ssmomonga.ssflicker</string>
	<string name="versionup_history">- Version update history</string>
	<string name="versionup_history_url">http://ssmomonga.blogspot.jp/2012/05/versionup-history-of-ssflicker.html</string>
	<string name="dev_info">Developer information</string>
	<string name="qa">- Q&amp;A site</string>
	<string name="qa_url">http://ssmomonga.blogspot.jp/2012/06/ssflicker-qa.html</string>
	<string name="email">- Email</string>
	<string name="email_address">ss.momonga@gmail.com</string>
	<string name="twitter">- Twitter</string>
	<string name="twitter_account">https://twitter.com/ssmomonga</string>
	<string name="blog">- Blog</string>
	<string name="blog_url">http://ssmomonga.blogspot.com/</string>
	<string name="privacy_policy_info">Privacy Policy</string>
	<string name="privacy_policy">- Privacy Policy</string>
	<string name="privacy_policy_url">http://ssmomonga.blogspot.jp/2000/01/blog-post.html</string>
	<string name="ver_info">Version</string>
	<string name="ver_0">- After the end of development, you can continue to use ssFlicker in old version, but can not update.</string>
	<string name="ver_1">- Android 4.0 : The end of development is in v1.3.3.</string>
	<string name="ver_2">- Android 4.x : The end of development is in v1.4.4.</string>
	<string name="permission">Permissions</string>
	<string name="prm_0">- directly call phone numbers: For direct dial of shortcut.</string>
	<string name="prm_1">- modify or delete the contents of your USB storage / read the contents of your USB storage: For storage backup, trimming image.</string>
	<string name="prm_2">- Google Play billing service: For donation.</string>
</resources>