<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/launch">
		<PreferenceScreen android:key="launch_by_default" android:title="@string/launch_by_default" />
		<PreferenceScreen android:key="launch_from_overlay" android:title="@string/launch_from_overlay" />
		<SwitchPreference android:key="statusbar" android:title="@string/launch_from_statusbar" android:defaultValue="false" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/view_action" >
		<PreferenceScreen android:title="@string/window" >
			<PreferenceCategory android:title="@string/window" >
				<com.ssmomonga.ssflicker.preference.ColorPreference android:key="window_background_color" android:title="@string/background_color" android:defaultValue="@color/window_background_color_default_value"/>
	    	</PreferenceCategory>
			<PreferenceCategory android:title="@string/display_position_portrait">
				<ListPreference
					android:key="pointer_window_position_portrait"
					android:title="@string/pointer_window"
					android:dialogTitle="@string/pointer_window"
					android:entries="@array/pointer_window_position_entries"
					android:entryValues="@array/pointer_window_position_entryvalues"
					android:defaultValue="81" />
				<ListPreference
					android:key="dock_window_position_portrait"
					android:title="@string/dock_window"
					android:dialogTitle="@string/dock_window"
					android:entries="@array/dock_window_position_portrait_entries"
					android:entryValues="@array/dock_window_position_portrait_entryvalues"
					android:defaultValue="80" />
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/display_position_landscape">
				<ListPreference
					android:key="pointer_window_position_landscape"
					android:title="@string/pointer_window"
					android:dialogTitle="@string/pointer_window"
					android:entries="@array/pointer_window_position_entries"
					android:entryValues="@array/pointer_window_position_entryvalues"
					android:defaultValue="21" />
				<ListPreference
					android:key="dock_window_position_landscape"
					android:title="@string/dock_window"
					android:dialogTitle="@string/dock_window"
					android:entries="@array/dock_window_position_landscape_entries"
					android:entryValues="@array/dock_window_position_landscape_entryvalues"
					android:defaultValue="5" />
			</PreferenceCategory>
		</PreferenceScreen>
		
		<PreferenceScreen android:title="@string/icon_text" >
			<PreferenceCategory android:title="@string/icon" >
			   	<ListPreference android:key="icon_size"
					android:title="@string/icon_size"
					android:dialogTitle="@string/icon_size"
					android:entries="@array/icon_size_entries"
					android:entryValues="@array/icon_size_entryvalues"
					android:defaultValue="40" />
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/text" >
				<SwitchPreference android:key="text_visibility" android:title="@string/text_visibility" android:defaultValue="true" />
				<com.ssmomonga.ssflicker.preference.ColorPreference android:key="text_color" android:title="@string/text_color" android:defaultValue="@android:color/white" android:dependency="text_visibility" />
				<ListPreference android:key="text_size"
					android:title="@string/text_size"
					android:dialogTitle="@string/text_size"
					android:entries="@array/text_size_entries"
					android:entryValues="@array/text_size_entryvalues"
					android:defaultValue="10"
					android:dependency="text_visibility" />
			</PreferenceCategory>
		</PreferenceScreen>
		
		<PreferenceScreen android:title="@string/etc..." >
			<SwitchPreference android:key="vibrate" android:title="@string/vibrate_when_tapping" android:defaultValue="false" />
			<SwitchPreference android:key="statusbar_visibility" android:title="@string/statusbar_visibility" android:summary="@string/statusbar_visibility_summary" android:defaultValue="false" />
			<SwitchPreference android:key="invisible_appwidget_background_visibility" android:title="@string/invisible_appwidget_background_visibility" android:defaultValue="false" />
		</PreferenceScreen>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/etc">
		<PreferenceScreen android:key="backup_restore" android:title="@string/backup_restore" />
		<PreferenceScreen android:key="donation" android:title="@string/donation" />
	</PreferenceCategory>
	
</PreferenceScreen>