<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/lp_mp_0" >

	<LinearLayout
		style="@style/lp_mp_wc"
		android:padding="16dp"
		android:orientation="vertical" >
		<LinearLayout
			style="@style/lp_mp_wc" >
			<ImageButton
				android:id="@+id/ib_icon"
				style="@style/lp_wc_wc"
				android:scaleType="centerCrop"
				android:layout_marginRight="8dp" />
			<EditText
				android:id="@+id/et_label"
				style="@style/lp_mp_wc"
				android:inputType="text"
				android:layout_gravity="bottom" />
		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/ll_send_template"
			style="@style/lp_mp_mp"
			android:paddingTop="16dp"
			android:orientation="vertical"
			android:visibility="gone" >
			<TextView
				style="@style/lp_mp_wc"
				android:text="@string/edit_send_text_template"
				android:textColor="?android:colorAccent" />
			<EditText
				android:id="@+id/et_send_template"
				style="@style/lp_mp_wc"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:inputType="textMultiLine" />
		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/ll_appwidget_position"
			style="@style/lp_mp_wc"
			android:paddingTop="16dp"
			android:orientation="vertical"
			android:visibility="gone" >
			<TextView
				style="@style/lp_mp_wc"
				android:text="@string/edit_appwidget_position"
				android:textColor="?android:colorAccent" />
			<LinearLayout
				style="@style/lp_mp_wc"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal"
				android:baselineAligned="false" >
				<LinearLayout
					style="@style/lp_wc_wc"
					android:gravity="center"
					android:layout_weight="2"
					android:orientation="vertical" >
					<TextView
						style="@style/lp_mp_wc"
						android:gravity="center"
						android:text="@string/horizontal" />
					<Spinner android:id="@+id/sp_appwidget_position_x"
						android:enabled="false"
						style="@style/lp_mp_wc" />	
				</LinearLayout>
				<LinearLayout
					style="@style/lp_wc_wc"
					android:layout_weight="1"
					android:orientation="horizontal" />
				<LinearLayout
					style="@style/lp_wc_wc"
					android:gravity="center"
					android:layout_weight="2"
					android:orientation="vertical" >
					<TextView
						style="@style/lp_mp_wc"
						android:gravity="center"
						android:text="@string/vertical" />
					<Spinner android:id="@+id/sp_appwidget_position_y"
						android:enabled="false"
						style="@style/lp_mp_wc" />	
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ll_appwidget_size"
			style="@style/lp_mp_mp"
			android:paddingTop="16dp"
			android:orientation="vertical"
			android:visibility="gone" >
			<TextView
				style="@style/lp_mp_wc"
				android:text="@string/edit_appwidget_size"
				android:textColor="?android:colorAccent" />
			<LinearLayout
				style="@style/lp_mp_wc"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal"
				android:baselineAligned="false" >
				<LinearLayout
					style="@style/lp_wc_wc"
					android:layout_weight="2"
					android:orientation="vertical" >
					<TextView
						style="@style/lp_mp_wc"
						android:gravity="center"
						android:text="@string/width" />
					<Spinner android:id="@+id/sp_appwidget_cell_width"
						android:enabled="false"
						style="@style/lp_mp_wc" />	
				</LinearLayout>
				<LinearLayout
					style="@style/lp_wc_wc"
					android:layout_weight="1"
					android:orientation="horizontal" />
				<LinearLayout
					style="@style/lp_wc_wc"
					android:layout_weight="2"
					android:orientation="vertical" >
					<TextView
						style="@style/lp_mp_wc"
						android:gravity="center"
						android:text="@string/height" />
					<Spinner android:id="@+id/sp_appwidget_cell_height"
						android:enabled="false"
						style="@style/lp_mp_wc" />	
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

	</LinearLayout>
</ScrollView>